--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>NDXs</title>
+    <title>NaitikXDev</title>
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <!-- google fonts  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
