--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <h1 class="display-5 fw-bold animate__animated animate__fadeIn wow "> ABOUT ME</h1>
                 <div class="col-lg-6 mx-auto">
                     <p class=" mt-4 col-l animate__animated animate__fadeIn wow">Hi, I am a skilled web designer with
-                        over x years
+                        1 years
                         of experience as frontend developer. I believe that
                         a well-designed website with proper functionality
                         attracts audience and provide them a
@@ -189,26 +189,24 @@
                 </div>
             </div>
             <div class="card grad-dark-2 pb-3 animate__animated animate__fadeIn wow" style="border-radius: 25px;">
-                <img class="rounded-lg" src="img2.jpg" alt="">
+                <img class="rounded-lg" src="img2.png" alt="">
                 <div class="content rounded-lg px-3">
-                    <h2 class="card-title text-center py-3 fw-bold text-white" style="font-size: 30px;">Twitter Clone
+                    <h2 class="card-title text-center py-3 fw-bold text-white" style="font-size: 30px;">QR Generator
                     </h2>
-                    <p class="text-white">Tweeks netlify is sample Twitter Frontend clone, deployed by some anonymous
-                        person.</p>
+                    <p class="text-white">Basic QR Generator with External API</p>
                     <p class="center">
-                        <a href="https://tweeks.netlify.app/" target="_blank">
-                            <button class="card-button">Visit site</button></a>
+                        <a href="https://naitikagarwal.github.io/qrgenerator/" target="_blank">
+                            <button class="card-button">Visit site</button></
                     </p>
                 </div>
             </div>
             <div class="card grad-dark-3 pb-3 animate__animated animate__slideInRight wow" style="border-radius: 25px;">
                 <img class="rounded-lg" src="img3.jpg" alt="">
                 <div class="content rounded-lg px-3">
-                    <h2 class="card-title text-center py-3 fw-bold text-white" style="font-size: 30px;">Online
-                        Calculator</h2>
-                    <p class="text-white">Online Calculator is a sample calculator, built using Html, CSS and JS.</p>
+                    <h2 class="card-title text-center py-3 fw-bold text-white" style="font-size: 30px;">ToDo List Web</h2>
+                    <p class="text-white">Basic Todo page where you can put up your daily tasks...</p>
                     <p class="center">
-                        <a href="https://www.online-calculator.com/simple-full-screen-calculator/" target="_blank">
+                        <a href="https://naitikagarwal.github.io/todo-vanilla/" target="_blank">
                             <button class="card-button">Visit site</button></a>
                     </p>
                 </div>
