--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
             </div>
             <div class="card grad-dark-3 pb-3 animate__animated animate__slideInRight wow" style="border-radius: 25px;">
-                <img class="rounded-lg" src="img3.jpg" alt="">
+                <img class="rounded-lg" src="img3.png" alt="">
                 <div class="content rounded-lg px-3">
                     <h2 class="card-title text-center py-3 fw-bold text-white" style="font-size: 30px;">ToDo List Web</h2>
                     <p class="text-white">Basic Todo page where you can put up your daily tasks...</p>
